--- a/example/mcts.ipynb
+++ b/example/mcts.ipynb
@@ -58,7 +58,7 @@
    "outputs": [],
    "source": [
     "if isinstance(model.config.eos_token_id, int):\n",
-    "    eos = [model.config.eos_token_id]\n",
+    "    model.config.eos_token_id = [model.config.eos_token_id]\n",
     "\n",
     "def has_eos(output, eos_token: list[int]):\n",
     "    return any(x for x in eos_token if x in output)    "
