Refactor MCTS implementation to handle tensor shapes correctly and update example notebook for improved clarity

--- a/example/mcts.ipynb
+++ b/example/mcts.ipynb
@@ -2,13 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "\n",
     "sys.path.append('..')\n",
+    "\n",
+    "\n",
+    "import os\n",
     "\n",
     "import torch\n",
     "\n",
@@ -25,35 +28,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading shards: 100%|██████████| 2/2 [02:51<00:00, 85.87s/it] \n",
-      "Loading checkpoint shards: 100%|██████████| 2/2 [00:00<00:00, 13.40it/s]\n"
+      "Loading checkpoint shards: 100%|██████████| 2/2 [00:00<00:00, 10.83it/s]\n"
      ]
     }
    ],
    "source": [
     "path = 'mkurman/llama-3.2-MEDIT-3B-o1'\n",
+    "hf_cache = os.environ.get('HF_HOME', os.path.expanduser('~/.cache/huggingface'))\n",
     "\n",
     "model = AutoModelForCausalLM.from_pretrained(\n",
     "    path,\n",
+    "    cache_dir=hf_cache,\n",
     "    torch_dtype=torch.bfloat16,\n",
     ")\n",
     "\n",
     "# path = 'microsoft/phi-4'\n",
     "tokenizer = AutoTokenizer.from_pretrained(\n",
     "    path,\n",
+    "    cache_dir=hf_cache,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,16 +124,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "The attention mask is not set and cannot be inferred from input because pad token is same as eos token. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -149,37 +147,30 @@
       "\n",
       "\n",
       "<Thought>\n",
-      "Alright, I need to determine the most effective pharmacotherapy for this patient's condition based on the provided clinical scenario. The patient is a 48-year-old man with a 10-year history of recurrent, intrusive thoughts about his house being broken into or destroyed by fire when he's not home. These thoughts have worsened over the past 2 months, leading to increased time spent checking doors, windows, stove, and oven, which has significantly impacted his ability to keep a job and leave the house. The physical examination is normal, and there's no history of serious illness or medication use. The mental status examination reveals an anxious mood and a sad affect, but no hallucinations or delusions. \n",
+      "Alright, let's analyze this question step by step to determine the most effective pharmacotherapy for the patient's condition.\n",
       "\n",
-      "First, let's summarize the key points:\n",
-      "- **Chief Complaint:** Recurrent, intrusive thoughts about house security.\n",
-      "- **Duration:** 10 years.\n",
-      "- **Symptoms:** Increased time spent checking doors, windows, stove, and oven.\n",
-      "- **Impact:** Impairs daily functioning (job and social activities).\n",
-      "- **Mental Status:** Anxious mood, sad affect, fully oriented, no hallucinations or delusions.\n",
-      "- **Physical Examination:** Normal.\n",
-      "- **Medical History:** No serious illness, no medication use.\n",
+      "First, the patient is a 48-year-old man with a 10-year history of recurrent, intrusive thoughts that his house will be broken into and damaged by criminals or accidentally destroyed by a fire when he is not home. These thoughts have worsened over the past 2 months. He reports spending significantly more time (4 hours daily) checking that the doors and windows are closed and locked and that the stove and oven are turned off compared to before (2 hours daily). This excessive preoccupation with safety measures is causing him to avoid leaving the house or keeping a job, leading to social isolation and significant distress.\n",
       "\n",
-      "Given these details, the patient's symptoms align closely with Obsessive-Compulsive Disorder (OCD), characterized by unwanted and intrusive thoughts (obsessions) and repetitive behaviors (compulsions) aimed at reducing anxiety. The patient's compulsions involve excessive checking behaviors, which are a hallmark of OCD.\n",
+      "The patient's symptoms suggest a diagnosis of Obsessive-Compulsive Disorder (OCD), specifically with a focus on obsessive thoughts about safety and compulsive behaviors to prevent perceived harm. The increased duration and severity of these thoughts, along with the significant impairment in daily functioning, support this diagnosis.\n",
       "\n",
-      "Now, let's evaluate the neurotransmitter options provided:\n",
+      "Now, considering the pharmacotherapy options provided:\n",
       "\n",
-      "A. **γ-Aminobutyric acid (GABA):** GABA is an inhibitory neurotransmitter that reduces neuronal excitability. While GABAergic medications are used in various psychiatric conditions, they are not typically the first-line treatment for OCD.\n",
+      "A. γ-Aminobutyric acid (GABA): GABA is an inhibitory neurotransmitter involved in reducing neuronal excitability throughout the nervous system. While GABAergic medications are used in treating anxiety disorders, they are not the primary target for OCD.\n",
       "\n",
-      "B. **Dopamine:** Dopamine is involved in reward, motivation, and motor control. While dopamine dysregulation is implicated in various psychiatric disorders, it's not the primary target for OCD treatment.\n",
+      "B. Dopamine: Dopamine is a neurotransmitter involved in reward, motivation, and movement. While dopamine dysregulation is implicated in various psychiatric disorders, it is not the primary target for OCD treatment.\n",
       "\n",
-      "C. **Glutamate:** Glutamate is an excitatory neurotransmitter involved in learning and memory. It's not directly targeted in OCD pharmacotherapy.\n",
+      "C. Glutamate: Glutamate is an excitatory neurotransmitter involved in learning and memory. Glutamate antagonists are sometimes used in treating certain psychiatric conditions, but they are not the mainstay for OCD.\n",
       "\n",
-      "D. **Norepinephrine:** Norepinephrine is involved in attention and arousal. While norepinephrine reuptake inhibitors (NRIs) are used in depression and anxiety disorders, they are not the primary choice for OCD.\n",
+      "D. Norepinephrine: Norepinephrine is involved in attention and arousal. While norepinephrine is a target for some antidepressants, it is not the primary neurotransmitter targeted in OCD treatment.\n",
       "\n",
-      "E. **Serotonin:** Serotonin is a key neurotransmitter in mood regulation and is widely recognized as the primary target for OCD treatment. Selective serotonin reuptake inhibitors (SSRIs) are the first-line pharmacological treatments for OCD. They are effective in reducing both the frequency and severity of obsessions and compulsions.\n",
+      "E. Serotonin: Serotonin is crucial in regulating mood, appetite, and sleep. Selective serotonin reuptake inhibitors (SSRIs) are the first-line pharmacological treatment for OCD. They work by increasing the availability of serotonin in the synaptic cleft, thereby reducing the symptoms of obsessive thoughts and compulsive behaviors.\n",
       "\n",
-      "Considering the above, the most effective pharmacotherapy for this patient's OCD symptoms would be an agent that targets serotonin.\n",
+      "Given this analysis, the most effective pharmacotherapy for this patient's OCD is an agent that targets serotonin. SSRIs are well-established and widely used in the treatment of OCD, making option E the correct answer.\n",
       "\n",
       "</Thought>\n",
       "<Output>\n",
       "E. Serotonin\n",
-      "</Output><|eot_id|><|eot_id|><|eot_id|>"
+      "</Output><|eot_id|>"
      ]
     }
    ],
@@ -195,11 +186,12 @@
     "    mcts = MCTS(model, tokenizer, max_depth=MAX_DEPTH, num_simulations=MAX_SIMULATIONS, temperature=TEMPERATURE, max_new_tokens=MAX_NEW_TOKENS, stop_tokens=model.config.eos_token_id)\n",
     "    \n",
     "    new_tokens = mcts.search(input_tokens)\n",
-    "    new_tokens = new_tokens[len(input_tokens[0]):]\n",
-    "    \n",
-    "    input_tokens = torch.cat([input_tokens, new_tokens.unsqueeze(0)], dim=-1)\n",
     "\n",
-    "    print(tokenizer.decode(new_tokens), end='')\n",
+    "    new_tokens = new_tokens[..., input_tokens.shape[-1]:]\n",
+    "\n",
+    "    input_tokens = torch.cat([input_tokens, new_tokens], dim=-1)\n",
+    "\n",
+    "    print(tokenizer.decode(new_tokens[0]), end='')\n",
     "\n",
     "    if has_eos(new_tokens, eos_token=model.config.eos_token_id):\n",
     "        break"
